Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -1403,19 +1403,19 @@
   "pli-tv-kd13:29.4.18": "but not those he doesn’t remember. ",
   "pli-tv-kd13:29.4.19": "He then disrobes. Being re-ordained and having remembered all of them, he conceals those offenses he previously remembered, ",
   "pli-tv-kd13:29.4.20": "but not those he didn’t remember. ",
-  "pli-tv-kd13:29.4.21": "He should be given probation according to the length of the earlier and subsequent concealment of those offenses, and he should then be given the trial period of six days. ",
+  "pli-tv-kd13:29.4.21": "He should be given probation according to the length of the earlier and subsequent concealment of those offenses, and he should then be given the trial period. ",
   "pli-tv-kd13:29.4.22": "It may be that a monk commits a number of offenses entailing suspension. ",
   "pli-tv-kd13:29.4.23": "He remembers some of them, but not others. ",
   "pli-tv-kd13:29.4.24": "He conceals the offenses he remembers, ",
   "pli-tv-kd13:29.4.25": "but not those he doesn’t remember. ",
   "pli-tv-kd13:29.4.26": "He then disrobes. Being re-ordained and having remembered all of them, he conceals all of them. ",
-  "pli-tv-kd13:29.4.28": "He should be given probation according to the length of the earlier and subsequent concealment of those offenses, and he should then be given the trial period of six days. ",
+  "pli-tv-kd13:29.4.28": "He should be given probation according to the length of the earlier and subsequent concealment of those offenses, and he should then be given the trial period. ",
   "pli-tv-kd13:29.5.1": "“It may be that a monk commits a number of offenses entailing suspension. ",
   "pli-tv-kd13:29.5.2": "He’s sure of some of them, but unsure of others. ",
   "pli-tv-kd13:29.5.3": "He conceals the offenses he’s sure of, ",
   "pli-tv-kd13:29.5.4": "but not those he’s unsure of. ",
   "pli-tv-kd13:29.5.5": "He then disrobes. Being re-ordained and having become sure of all of them, he conceals none of them. ",
-  "pli-tv-kd13:29.5.7": "He should be given probation according to the length of the earlier concealment of those offenses, and he should then be given the trial period of six days. ",
+  "pli-tv-kd13:29.5.7": "He should be given probation according to the length of the earlier concealment of those offenses, and he should then be given the trial period. ",
   "pli-tv-kd13:29.5.8": "It may be that a monk commits a number of offenses entailing suspension. ",
   "pli-tv-kd13:29.5.9": "He’s sure of some of them, but unsure of others. ",
   "pli-tv-kd13:29.5.10": "He conceals the offenses he’s sure of, ",
