--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -1450,8 +1450,8 @@
   "pli-tv-kd13:30.1.12": "He then becomes overwhelmed by pain. ",
   "pli-tv-kd13:30.1.13": "Having recovered and having become sure of all of them, he conceals none of them. … ",
   "pli-tv-kd13:30.1.15": "having become sure of all of them, he doesn’t conceal those offenses he was previously sure of, ",
-  "pli-tv-kd13:30.1.16": "but he conceals those he was unsure of. … ",
-  "pli-tv-kd13:30.1.17": "having become sure of all of them, he conceals those offenses he previously was sure of, ",
+  "pli-tv-kd13:30.1.16": "but conceals those he was unsure of. … ",
+  "pli-tv-kd13:30.1.17": "having become sure of all of them, he conceals those offenses he was previously sure of, ",
   "pli-tv-kd13:30.1.18": "but not those he was unsure of. … ",
   "pli-tv-kd13:30.1.19": "having become sure of all of them, he conceals all of them. ",
   "pli-tv-kd13:30.1.21": "He should be given probation according to the length of the earlier and subsequent concealment of those offenses, and he should then be given the trial period of six days.” ",
