--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -1480,7 +1480,7 @@
   "pli-tv-kd13:31.2.7": "It may be that a monk on probation commits a number of offenses entailing suspension, ",
   "pli-tv-kd13:31.2.8": "both concealed and unconcealed, ",
   "pli-tv-kd13:31.2.9": "and then disrobes. Being re-ordained, he doesn’t conceal those offenses he previously concealed, ",
-  "pli-tv-kd13:31.2.10": "but he conceals those he previously didn’t conceal. ",
+  "pli-tv-kd13:31.2.10": "but conceals those he previously didn’t conceal. ",
   "pli-tv-kd13:31.2.11": "He’s to be sent back to the beginning. ",
   "pli-tv-kd13:31.2.12": "He’s then to be given probation according to the length of the concealment of those offenses and simultaneously with the probation for the previous offenses. ",
   "pli-tv-kd13:31.2.13": "It may be that a monk on probation commits a number of offenses entailing suspension, ",
