--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -1496,9 +1496,9 @@
   "pli-tv-kd13:31.2.24": "He’s then to be given probation according to the length of the concealment of those offenses and simultaneously with the probation for the previous offenses. ",
   "pli-tv-kd13:31.3.1": "“It may be that a monk on probation commits a number of offenses entailing suspension. ",
   "pli-tv-kd13:31.3.2": "He’s aware of some of them, but not others. ",
-  "pli-tv-kd13:31.3.3": "He conceals the offenses he knows about, ",
-  "pli-tv-kd13:31.3.4": "but not those he doesn’t know about. ",
-  "pli-tv-kd13:31.3.5": "He then disrobes. Being re-ordained and having found out about all the offenses, he conceals none of them. ",
+  "pli-tv-kd13:31.3.3": "He conceals the offenses he’s aware of, ",
+  "pli-tv-kd13:31.3.4": "but not those he isn’t aware of. ",
+  "pli-tv-kd13:31.3.5": "He then disrobes. Being re-ordained and having found out about all of them, he conceals none of them. ",
   "pli-tv-kd13:31.3.7": "He’s to be sent back to the beginning. ",
   "pli-tv-kd13:31.3.8": "He’s then to be given probation according to the length of the concealment of those offenses and simultaneously with the probation for the previous offenses. ",
   "pli-tv-kd13:31.3.9": "It may be that a monk on probation commits a number of offenses entailing suspension. ",
