Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -1502,15 +1502,15 @@
   "pli-tv-kd13:31.3.7": "He’s to be sent back to the beginning. ",
   "pli-tv-kd13:31.3.8": "He’s then to be given probation according to the length of the concealment of those offenses and simultaneously with the probation for the previous offenses. ",
   "pli-tv-kd13:31.3.9": "It may be that a monk on probation commits a number of offenses entailing suspension. ",
-  "pli-tv-kd13:31.3.10": "He knows about some of the offenses, but not others. ",
-  "pli-tv-kd13:31.3.11": "He conceals the offenses he knows about, ",
-  "pli-tv-kd13:31.3.12": "but not those he doesn’t know about. ",
-  "pli-tv-kd13:31.3.13": "He then disrobes. Being re-ordained and having found out about all the offenses, he doesn’t conceal those offenses he previously knew about, ",
-  "pli-tv-kd13:31.3.14": "but he conceals those he didn’t know about. ",
+  "pli-tv-kd13:31.3.10": "He’s aware of some of them, but not others. ",
+  "pli-tv-kd13:31.3.11": "He conceals the offenses he’s aware of, ",
+  "pli-tv-kd13:31.3.12": "but not those he isn’t aware of. ",
+  "pli-tv-kd13:31.3.13": "He then disrobes. Being re-ordained and having found out about all of them, he doesn’t conceal those offenses he was previously aware of, ",
+  "pli-tv-kd13:31.3.14": "but conceals those he wasn’t aware of. ",
   "pli-tv-kd13:31.3.15": "He’s to be sent back to the beginning. ",
   "pli-tv-kd13:31.3.16": "He’s then to be given probation according to the length of the concealment of those offenses and simultaneously with the probation for the previous offenses. ",
   "pli-tv-kd13:31.3.17": "It may be that a monk on probation commits a number of offenses entailing suspension. ",
-  "pli-tv-kd13:31.3.18": "He knows about some of the offenses, but not others. ",
+  "pli-tv-kd13:31.3.18": "He’s aware of some of them, but not others. ",
   "pli-tv-kd13:31.3.19": "He conceals the offenses he knows about, ",
   "pli-tv-kd13:31.3.20": "but not those he doesn’t know about. ",
   "pli-tv-kd13:31.3.21": "He then disrobes. Being re-ordained and having found out about all the offenses, he conceals those offenses he previously knew about, ",
