Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -1511,15 +1511,15 @@
   "pli-tv-kd13:31.3.16": "He’s then to be given probation according to the length of the concealment of those offenses and simultaneously with the probation for the previous offenses. ",
   "pli-tv-kd13:31.3.17": "It may be that a monk on probation commits a number of offenses entailing suspension. ",
   "pli-tv-kd13:31.3.18": "He’s aware of some of them, but not others. ",
-  "pli-tv-kd13:31.3.19": "He conceals the offenses he knows about, ",
-  "pli-tv-kd13:31.3.20": "but not those he doesn’t know about. ",
-  "pli-tv-kd13:31.3.21": "He then disrobes. Being re-ordained and having found out about all the offenses, he conceals those offenses he previously knew about, ",
-  "pli-tv-kd13:31.3.22": "but not those he didn’t know about. ",
+  "pli-tv-kd13:31.3.19": "He conceals the offenses he’s aware of, ",
+  "pli-tv-kd13:31.3.20": "but not those he isn’t aware of. ",
+  "pli-tv-kd13:31.3.21": "He then disrobes. Being re-ordained and having found out about all of them, he conceals those offenses he was previously aware of, ",
+  "pli-tv-kd13:31.3.22": "but not those he wasn’t aware of. ",
   "pli-tv-kd13:31.3.23": "He’s to be sent back to the beginning. ",
   "pli-tv-kd13:31.3.24": "He’s then to be given probation according to the length of the concealment of those offenses and simultaneously with the probation for the previous offenses. ",
   "pli-tv-kd13:31.3.25": "It may be that a monk on probation commits a number of offenses entailing suspension. ",
-  "pli-tv-kd13:31.3.26": "He knows about some of the offenses, but not others. ",
-  "pli-tv-kd13:31.3.27": "He conceals the offenses he knows about, but not those he doesn’t know about. ",
+  "pli-tv-kd13:31.3.26": "He’s aware of some of them, but not others. ",
+  "pli-tv-kd13:31.3.27": "He conceals the offenses he’s aware of, but not those he isn’t aware of. ",
   "pli-tv-kd13:31.3.28": "He then disrobes. Being re-ordained and having found out about all the offenses, he conceals all of them. ",
   "pli-tv-kd13:31.3.30": "He’s to be sent back to the beginning. ",
   "pli-tv-kd13:31.3.31": "He’s then to be given probation according to the length of the concealment of those offenses and simultaneously with the probation for the previous offenses. ",
