--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -1520,26 +1520,26 @@
   "pli-tv-kd13:31.3.25": "It may be that a monk on probation commits a number of offenses entailing suspension. ",
   "pli-tv-kd13:31.3.26": "He’s aware of some of them, but not others. ",
   "pli-tv-kd13:31.3.27": "He conceals the offenses he’s aware of, but not those he isn’t aware of. ",
-  "pli-tv-kd13:31.3.28": "He then disrobes. Being re-ordained and having found out about all the offenses, he conceals all of them. ",
+  "pli-tv-kd13:31.3.28": "He then disrobes. Being re-ordained and having found out about all of them, he conceals all of them. ",
   "pli-tv-kd13:31.3.30": "He’s to be sent back to the beginning. ",
   "pli-tv-kd13:31.3.31": "He’s then to be given probation according to the length of the concealment of those offenses and simultaneously with the probation for the previous offenses. ",
   "pli-tv-kd13:31.3.32": "“It may be that a monk on probation commits a number of offenses entailing suspension. ",
-  "pli-tv-kd13:31.3.33": "He remembers some of the offenses, but not others. ",
+  "pli-tv-kd13:31.3.33": "He remembers some of them, but not others. ",
   "pli-tv-kd13:31.3.34": "He conceals the offenses he remembers, ",
   "pli-tv-kd13:31.3.35": "but not those he doesn’t remember. ",
-  "pli-tv-kd13:31.3.36": "He then disrobes. Being re-ordained and having remembered all the offenses, he conceals none of them. ",
+  "pli-tv-kd13:31.3.36": "He then disrobes. Being re-ordained and having remembered all them, he conceals none of them. ",
   "pli-tv-kd13:31.3.38": "He’s to be sent back to the beginning. ",
   "pli-tv-kd13:31.3.39": "He’s then to be given probation according to the length of the concealment of those offenses and simultaneously with the probation for the previous offenses. ",
   "pli-tv-kd13:31.3.40": "It may be that a monk on probation commits a number of offenses entailing suspension. ",
-  "pli-tv-kd13:31.3.41": "He remembers some of the offenses, but not others. ",
+  "pli-tv-kd13:31.3.41": "He remembers some of them, but not others. ",
   "pli-tv-kd13:31.3.42": "He conceals the offenses he remembers, ",
   "pli-tv-kd13:31.3.43": "but not those he doesn’t remember. ",
   "pli-tv-kd13:31.3.44": "He then disrobes. Being re-ordained and having remembered all the offenses, he doesn’t conceal those offenses he previously remembered, ",
-  "pli-tv-kd13:31.3.45": "but he conceals those he didn’t remember. ",
+  "pli-tv-kd13:31.3.45": "but conceals those he didn’t remember. ",
   "pli-tv-kd13:31.3.46": "He’s to be sent back to the beginning. ",
   "pli-tv-kd13:31.3.47": "He’s then to be given probation according to the length of the concealment of those offenses and simultaneously with the probation for the previous offenses. ",
   "pli-tv-kd13:31.3.48": "It may be that a monk on probation commits a number of offenses entailing suspension. ",
-  "pli-tv-kd13:31.3.49": "He remembers some of the offenses, but not others. ",
+  "pli-tv-kd13:31.3.49": "He remembers some of them, but not others. ",
   "pli-tv-kd13:31.3.50": "He conceals the offenses he remembers, ",
   "pli-tv-kd13:31.3.51": "but not those he doesn’t remember. ",
   "pli-tv-kd13:31.3.52": "He then disrobes. Being re-ordained and having remembered all the offenses, he conceals those offenses he previously remembered, ",
