Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -1588,7 +1588,7 @@
   "pli-tv-kd13:31.3.98": "becomes deranged … ",
   "pli-tv-kd13:31.3.99": "is overwhelmed by pain … ",
   "pli-tv-kd13:31.3.100": "both concealed and unconcealed … ",
-  "pli-tv-kd13:31.3.101": "(To be expanded as above.) ",
+  "pli-tv-kd13:31.3.101": "(to be expanded as above) … ",
   "pli-tv-kd13:31.3.102": "he knows about some of the offenses, but not others … ",
   "pli-tv-kd13:31.3.103": "he remembers some of the offenses, but not others … ",
   "pli-tv-kd13:31.3.104": "he’s sure of some of the offenses, but unsure of others. ",
