--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -1589,13 +1589,13 @@
   "pli-tv-kd13:31.3.99": "is overwhelmed by pain … ",
   "pli-tv-kd13:31.3.100": "both concealed and unconcealed … ",
   "pli-tv-kd13:31.3.101": "(to be expanded as above) … ",
-  "pli-tv-kd13:31.3.102": "he knows about some of the offenses, but not others … ",
+  "pli-tv-kd13:31.3.102": "he’s aware of some of the offenses, but not others … ",
   "pli-tv-kd13:31.3.103": "he remembers some of the offenses, but not others … ",
   "pli-tv-kd13:31.3.104": "he’s sure of some of the offenses, but unsure of others. ",
   "pli-tv-kd13:31.3.105": "He conceals the offenses he’s sure of, ",
   "pli-tv-kd13:31.3.106": "but not those he’s unsure of. ",
   "pli-tv-kd13:31.3.107": "He then becomes overwhelmed by pain. ",
-  "pli-tv-kd13:31.3.108": "When he recovers and having become sure of all the offenses, he conceals none of them. … ",
+  "pli-tv-kd13:31.3.108": "Having recovered and having become sure of all of them, he conceals none of them. … ",
   "pli-tv-kd13:31.3.110": "having become sure of all the offenses, he doesn’t conceal those offenses he previously was sure of, ",
   "pli-tv-kd13:31.3.111": "but he conceals those he was unsure of. … ",
   "pli-tv-kd13:31.3.112": "having become sure of all the offenses, he conceals those offenses he previously was sure of, ",
