Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -1596,9 +1596,9 @@
   "pli-tv-kd13:31.3.106": "but not those he’s unsure of. ",
   "pli-tv-kd13:31.3.107": "He then becomes overwhelmed by pain. ",
   "pli-tv-kd13:31.3.108": "Having recovered and having become sure of all of them, he conceals none of them. … ",
-  "pli-tv-kd13:31.3.110": "having become sure of all the offenses, he doesn’t conceal those offenses he previously was sure of, ",
-  "pli-tv-kd13:31.3.111": "but he conceals those he was unsure of. … ",
-  "pli-tv-kd13:31.3.112": "having become sure of all the offenses, he conceals those offenses he previously was sure of, ",
+  "pli-tv-kd13:31.3.110": "having become sure of all of them, he doesn’t conceal those offenses he was previously sure of, ",
+  "pli-tv-kd13:31.3.111": "but conceals those he was unsure of. … ",
+  "pli-tv-kd13:31.3.112": "having become sure of all of them, he conceals those offenses he was previously sure of, ",
   "pli-tv-kd13:31.3.113": "but not those he was unsure of. … ",
   "pli-tv-kd13:31.3.114": "having become sure of all the offenses, he conceals all of them. ",
   "pli-tv-kd13:31.3.116": "He’s to be sent back to the beginning. ",
