--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -1600,10 +1600,10 @@
   "pli-tv-kd13:31.3.111": "but conceals those he was unsure of. … ",
   "pli-tv-kd13:31.3.112": "having become sure of all of them, he conceals those offenses he was previously sure of, ",
   "pli-tv-kd13:31.3.113": "but not those he was unsure of. … ",
-  "pli-tv-kd13:31.3.114": "having become sure of all the offenses, he conceals all of them. ",
+  "pli-tv-kd13:31.3.114": "having become sure of all of them, he conceals all of them. ",
   "pli-tv-kd13:31.3.116": "He’s to be sent back to the beginning. ",
   "pli-tv-kd13:31.3.117": "He’s then to be given probation according to the length of the concealment of those offenses and simultaneously with the probation for the previous offenses. ",
-  "pli-tv-kd13:32.1.1": "“It may be that a monk who deserves the trial period of six days … ",
+  "pli-tv-kd13:32.1.1": "“It may be that a monk who deserves the trial period … ",
   "pli-tv-kd13:32.1.2": "who’s undertaking the trial period of six days … ",
   "pli-tv-kd13:32.1.3": "who deserves rehabilitation commits a number of unconcealed offenses entailing suspension, and then disrobes. … ",
   "pli-tv-kd13:32.1.4": "(‘Who deserves the trial period’, ‘who’s undertaking the trial period’, and ‘who deserves rehabilitation’ are to be expanded as for ‘on probation’.) ",
