--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -1604,9 +1604,9 @@
   "pli-tv-kd13:31.3.116": "He’s to be sent back to the beginning. ",
   "pli-tv-kd13:31.3.117": "He’s then to be given probation according to the length of the concealment of those offenses and simultaneously with the probation for the previous offenses. ",
   "pli-tv-kd13:32.1.1": "“It may be that a monk who deserves the trial period … ",
-  "pli-tv-kd13:32.1.2": "who’s undertaking the trial period of six days … ",
-  "pli-tv-kd13:32.1.3": "who deserves rehabilitation commits a number of unconcealed offenses entailing suspension, and then disrobes. … ",
-  "pli-tv-kd13:32.1.4": "(‘Who deserves the trial period’, ‘who’s undertaking the trial period’, and ‘who deserves rehabilitation’ are to be expanded as for ‘on probation’.) ",
+  "pli-tv-kd13:32.1.2": "who’s undertaking the trial period … ",
+  "pli-tv-kd13:32.1.3": "who deserves rehabilitation commits a number of unconcealed offenses entailing suspension and then disrobes. … ",
+  "pli-tv-kd13:32.1.4": "(‘who deserves the trial period’, ‘who’s undertaking the trial period’, and ‘who deserves rehabilitation’ are to be expanded as for ‘on probation’) … ",
   "pli-tv-kd13:32.1.5": "It may be that a monk who deserves rehabilitation commits a number of unconcealed offenses entailing suspension, and then becomes a novice monk … ",
   "pli-tv-kd13:32.1.6": "goes insane … ",
   "pli-tv-kd13:32.1.7": "becomes deranged … ",
