--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -1607,7 +1607,7 @@
   "pli-tv-kd13:32.1.2": "who’s undertaking the trial period … ",
   "pli-tv-kd13:32.1.3": "who deserves rehabilitation commits a number of unconcealed offenses entailing suspension and then disrobes. … ",
   "pli-tv-kd13:32.1.4": "(‘who deserves the trial period’, ‘who’s undertaking the trial period’, and ‘who deserves rehabilitation’ are to be expanded as for ‘on probation’) … ",
-  "pli-tv-kd13:32.1.5": "It may be that a monk who deserves rehabilitation commits a number of unconcealed offenses entailing suspension, and then becomes a novice monk … ",
+  "pli-tv-kd13:32.1.5": "It may be that a monk who deserves rehabilitation commits a number of unconcealed offenses entailing suspension and then becomes a novice monk … ",
   "pli-tv-kd13:32.1.6": "goes insane … ",
   "pli-tv-kd13:32.1.7": "becomes deranged … ",
   "pli-tv-kd13:32.1.8": "is overwhelmed by pain … ",
