--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -1612,7 +1612,7 @@
   "pli-tv-kd13:32.1.7": "becomes deranged … ",
   "pli-tv-kd13:32.1.8": "is overwhelmed by pain … ",
   "pli-tv-kd13:32.1.9": "both concealed and unconcealed … ",
-  "pli-tv-kd13:32.1.10": "he knows about some of the offenses, but not others … ",
+  "pli-tv-kd13:32.1.10": "he’s aware of some of the offenses, but not others … ",
   "pli-tv-kd13:32.1.11": "he remembers some of the offenses, but not others … ",
   "pli-tv-kd13:32.1.12": "he’s sure of some of the offenses, but unsure of others. ",
   "pli-tv-kd13:32.1.13": "He conceals the offenses he’s sure of, ",
