Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -1618,8 +1618,8 @@
   "pli-tv-kd13:32.1.13": "He conceals the offenses he’s sure of, ",
   "pli-tv-kd13:32.1.14": "but not those he’s unsure of. ",
   "pli-tv-kd13:32.1.15": "He then becomes overwhelmed by pain. ",
-  "pli-tv-kd13:32.1.16": "When he recovers and having become sure of all the offenses, he conceals none of them. … ",
-  "pli-tv-kd13:32.1.18": "having become sure of all the offenses, he doesn’t conceal those offenses he previously was sure of, ",
+  "pli-tv-kd13:32.1.16": "Having recovered and having become sure of all the offenses, he conceals none of them. … ",
+  "pli-tv-kd13:32.1.18": "having become sure of all of them, he doesn’t conceal those offenses he was previously sure of, ",
   "pli-tv-kd13:32.1.19": "but he conceals those he was unsure of. … ",
   "pli-tv-kd13:32.1.20": "having become sure of all the offenses, he conceals those offenses he previously was sure of, ",
   "pli-tv-kd13:32.1.21": "but not those he was unsure of. … ",
