--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -1620,10 +1620,10 @@
   "pli-tv-kd13:32.1.15": "He then becomes overwhelmed by pain. ",
   "pli-tv-kd13:32.1.16": "Having recovered and having become sure of all the offenses, he conceals none of them. … ",
   "pli-tv-kd13:32.1.18": "having become sure of all of them, he doesn’t conceal those offenses he was previously sure of, ",
-  "pli-tv-kd13:32.1.19": "but he conceals those he was unsure of. … ",
-  "pli-tv-kd13:32.1.20": "having become sure of all the offenses, he conceals those offenses he previously was sure of, ",
+  "pli-tv-kd13:32.1.19": "but conceals those he was unsure of. … ",
+  "pli-tv-kd13:32.1.20": "having become sure of all of them, he conceals those offenses he was previously sure of, ",
   "pli-tv-kd13:32.1.21": "but not those he was unsure of. … ",
-  "pli-tv-kd13:32.1.22": "having become sure of all the offenses, he conceals all of them. ",
+  "pli-tv-kd13:32.1.22": "having become sure of all of them, he conceals all of them. ",
   "pli-tv-kd13:32.1.24": "He’s to be sent back to the beginning. ",
   "pli-tv-kd13:32.1.25": "He’s then to be given probation according to the length of the concealment of those offenses and simultaneously with the probation for the previous offenses.” ",
   "pli-tv-kd13:32.1.26": "The group of four hundred on simultaneous probation with being sent back to the beginning is finished. ",
