--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -1629,7 +1629,7 @@
   "pli-tv-kd13:32.1.26": "The group of four hundred on simultaneous probation with being sent back to the beginning is finished. ",
   "pli-tv-kd13:33.1.0": "7. The group of eight sections on “specified”, etc. ",
   "pli-tv-kd13:33.1.1": "“It may be that a monk commits a number of offenses entailing suspension, unconcealed and specified … ",
-  "pli-tv-kd13:33.1.2": "unspecified and unconcealed … ",
+  "pli-tv-kd13:33.1.2": "unconcealed and unspecified … ",
   "pli-tv-kd13:33.1.3": "of one name and unconcealed … ",
   "pli-tv-kd13:33.1.4": "of various names and unconcealed … ",
   "pli-tv-kd13:33.1.5": "of one kind and unconcealed … ",
