--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -1631,7 +1631,7 @@
   "pli-tv-kd13:33.1.1": "“It may be that a monk commits a number of offenses entailing suspension, unconcealed and specified … ",
   "pli-tv-kd13:33.1.2": "unconcealed and unspecified … ",
   "pli-tv-kd13:33.1.3": "unconcealed and having the same name … ",
-  "pli-tv-kd13:33.1.4": "of various names and unconcealed … ",
+  "pli-tv-kd13:33.1.4": "unconcealed and having different names … ",
   "pli-tv-kd13:33.1.5": "of one kind and unconcealed … ",
   "pli-tv-kd13:33.1.6": "of different kinds and unconcealed … ",
   "pli-tv-kd13:33.1.7": "of the same sort and unconcealed … ",
