--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -1632,7 +1632,7 @@
   "pli-tv-kd13:33.1.2": "unconcealed and unspecified … ",
   "pli-tv-kd13:33.1.3": "unconcealed and having the same name … ",
   "pli-tv-kd13:33.1.4": "unconcealed and having different names … ",
-  "pli-tv-kd13:33.1.5": "of one kind and unconcealed … ",
+  "pli-tv-kd13:33.1.5": "unconcealed and of the same kind … ",
   "pli-tv-kd13:33.1.6": "of different kinds and unconcealed … ",
   "pli-tv-kd13:33.1.7": "of the same sort and unconcealed … ",
   "pli-tv-kd13:33.1.8": "of various sorts and unconcealed, and then disrobes. …” ",
