Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -1635,7 +1635,7 @@
   "pli-tv-kd13:33.1.5": "unconcealed and of the same kind … ",
   "pli-tv-kd13:33.1.6": "unconcealed and of different kinds … ",
   "pli-tv-kd13:33.1.7": "unconcealed and of the same sort … ",
-  "pli-tv-kd13:33.1.8": "of various sorts and unconcealed, and then disrobes. …” ",
+  "pli-tv-kd13:33.1.8": "unconcealed and of different sorts and then disrobes. … ",
   "pli-tv-kd13:33.1.9": "(to be expanded as above) … ",
   "pli-tv-kd13:33.1.10": "The group of eight sections on “specified”, etc., is finished. ",
   "pli-tv-kd13:34.1.0": "8. The group of eleven sections on two monks ",
