--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -1640,7 +1640,7 @@
   "pli-tv-kd13:33.1.10": "The group of eight sections on “specified”, etc., is finished. ",
   "pli-tv-kd13:34.1.0": "8. The group of eleven sections on two monks ",
   "pli-tv-kd13:34.1.1": "Two monks have each committed an offense entailing suspension, ",
-  "pli-tv-kd13:34.1.2": "and they regard it as an offense entailing suspension. ",
+  "pli-tv-kd13:34.1.2": "and they regard it as such. ",
   "pli-tv-kd13:34.1.3": "One conceals his offense, but not the other. ",
   "pli-tv-kd13:34.1.4": "The one who conceals it is to confess an offense of wrong conduct. ",
   "pli-tv-kd13:34.1.5": "He should be given probation according to the length of the concealment of that offense, and both should then be given the trial period of six days. ",
