Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -1643,7 +1643,7 @@
   "pli-tv-kd13:34.1.2": "and they regard it as such. ",
   "pli-tv-kd13:34.1.3": "One conceals his offense, but not the other. ",
   "pli-tv-kd13:34.1.4": "The one who conceals it is to confess an offense of wrong conduct. ",
-  "pli-tv-kd13:34.1.5": "He should be given probation according to the length of the concealment of that offense, and both should then be given the trial period of six days. ",
+  "pli-tv-kd13:34.1.5": "He should be given probation according to the length of that concealment, and both should then be given the trial period. ",
   "pli-tv-kd13:34.1.6": "Two monks have each committed an offense entailing suspension, ",
   "pli-tv-kd13:34.1.7": "but they have doubts about whether they have. ",
   "pli-tv-kd13:34.1.8": "One conceals his offense, but not the other. ",
