Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -1655,7 +1655,7 @@
   "pli-tv-kd13:34.1.14": "The one who conceals it is to confess an offense of wrong conduct. ",
   "pli-tv-kd13:34.1.15": "He should be given probation according to the length of that concealment, and both should then be given the trial period. ",
   "pli-tv-kd13:34.1.16": "Two monks have each committed an offense entailing suspension mixed with other offenses, ",
-  "pli-tv-kd13:34.1.17": "but they regard them as offenses entailing suspension. ",
+  "pli-tv-kd13:34.1.17": "but they regard them as an offense entailing suspension. ",
   "pli-tv-kd13:34.1.18": "One conceals his offenses, but not the other. ",
   "pli-tv-kd13:34.1.19": "The one who conceals them is to confess an offense of wrong conduct. ",
   "pli-tv-kd13:34.1.20": "He should be given probation according to the length of the concealment, and both should then be given the trial period of six days. ",
