Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -1663,7 +1663,7 @@
   "pli-tv-kd13:34.1.22": "and they regard them as such. ",
   "pli-tv-kd13:34.1.23": "One conceals his offenses, but not the other. ",
   "pli-tv-kd13:34.1.24": "The one who conceals them is to confess an offense of wrong conduct. ",
-  "pli-tv-kd13:34.1.25": "He should be given probation according to the length of the concealment, and both should then be given the trial period of six days. ",
+  "pli-tv-kd13:34.1.25": "He should be given probation according to the length of that concealment, and both should then be given the trial period. ",
   "pli-tv-kd13:34.1.26": "Two monks have each committed a light offense, ",
   "pli-tv-kd13:34.1.27": "but they regard it as an offense entailing suspension. ",
   "pli-tv-kd13:34.1.28": "One conceals his offense, but not the other. ",
