Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -1670,7 +1670,7 @@
   "pli-tv-kd13:34.1.29": "The one who conceals it is to confess an offense of wrong conduct. ",
   "pli-tv-kd13:34.1.30": "Both are then to be dealt with according to the rule. ",
   "pli-tv-kd13:34.1.31": "Two monks have each committed a light offense, ",
-  "pli-tv-kd13:34.1.32": "and they regard it as a light offense. ",
+  "pli-tv-kd13:34.1.32": "and they regard it as such. ",
   "pli-tv-kd13:34.1.33": "One conceals his offense, but not the other. ",
   "pli-tv-kd13:34.1.34": "The one who conceals it is to confess an offense of wrong conduct. ",
   "pli-tv-kd13:34.1.35": "Both are then to be dealt with according to the rule. ",
