--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -1676,11 +1676,11 @@
   "pli-tv-kd13:34.1.35": "Both are then to be dealt with according to the rule. ",
   "pli-tv-kd13:34.2.1": "Two monks have each committed an offense entailing suspension, ",
   "pli-tv-kd13:34.2.2": "and they regard it as such. ",
-  "pli-tv-kd13:34.2.3": "One thinks, “I’ll inform;” the other thinks, “I won’t inform.” ",
+  "pli-tv-kd13:34.2.3": "One thinks, “I’ll inform,” while the other thinks, “I won’t inform.” ",
   "pli-tv-kd13:34.2.4": "He then conceals it during the first part of the night, during the second part of the night, and during the third part of the night. ",
   "pli-tv-kd13:34.2.5": "If he’s still concealing it at dawn, he has committed an offense ",
   "pli-tv-kd13:34.2.6": "and is to confess an offense of wrong conduct. ",
-  "pli-tv-kd13:34.2.7": "He should be given probation according to the length of the concealment of that offense, and both should then be given the trial period of six days. ",
+  "pli-tv-kd13:34.2.7": "He should be given probation according to the length of that concealment, and both should then be given the trial period. ",
   "pli-tv-kd13:34.2.8": "Two monks have each committed an offense entailing suspension, ",
   "pli-tv-kd13:34.2.9": "and they regard it as an offense entailing suspension. ",
   "pli-tv-kd13:34.2.10": "They go, thinking, “We’ll inform.” ",
