--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -1682,7 +1682,7 @@
   "pli-tv-kd13:34.2.6": "and is to confess an offense of wrong conduct. ",
   "pli-tv-kd13:34.2.7": "He should be given probation according to the length of that concealment, and both should then be given the trial period. ",
   "pli-tv-kd13:34.2.8": "Two monks have each committed an offense entailing suspension, ",
-  "pli-tv-kd13:34.2.9": "and they regard it as an offense entailing suspension. ",
+  "pli-tv-kd13:34.2.9": "and they regard it as such. ",
   "pli-tv-kd13:34.2.10": "They go, thinking, “We’ll inform.” ",
   "pli-tv-kd13:34.2.11": "On their way, one of them decides to conceal it, thinking, “I won’t inform.” ",
   "pli-tv-kd13:34.2.12": "He then conceals it during the first part of the night, during the second part of the night, and during the third part of the night. ",
