Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -1688,10 +1688,10 @@
   "pli-tv-kd13:34.2.12": "He then conceals it during the first part of the night, during the second part of the night, and during the third part of the night. ",
   "pli-tv-kd13:34.2.13": "If he’s still concealing it at dawn, he has committed an offense ",
   "pli-tv-kd13:34.2.14": "and is to confess an offense of wrong conduct. ",
-  "pli-tv-kd13:34.2.15": "He should be given probation according to the length of the concealment of that offense, and both should then be given the trial period of six days. ",
-  "pli-tv-kd13:34.2.16": "Two monks have each committed an offense entailing suspension. ",
-  "pli-tv-kd13:34.2.17": "They regard it as an offense entailing suspension, ",
-  "pli-tv-kd13:34.2.18": "but then go insane. ",
+  "pli-tv-kd13:34.2.15": "He should be given probation according to the length of that concealment, and both should then be given the trial period. ",
+  "pli-tv-kd13:34.2.16": "Two monks have each committed an offense entailing suspension, ",
+  "pli-tv-kd13:34.2.17": "and they regard it as such. ",
+  "pli-tv-kd13:34.2.18": "They then go insane. ",
   "pli-tv-kd13:34.2.19": "When they regain their sanity, one conceals his offense, but not the other. ",
   "pli-tv-kd13:34.2.20": "The one who conceals it is to confess an offense of wrong conduct. ",
   "pli-tv-kd13:34.2.21": "He should be given probation according to the length of the concealment of that offense, and both should then be given the trial period of six days. ",
