Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -1694,7 +1694,7 @@
   "pli-tv-kd13:34.2.18": "They then go insane. ",
   "pli-tv-kd13:34.2.19": "When they regain their sanity, one conceals his offense, but not the other. ",
   "pli-tv-kd13:34.2.20": "The one who conceals it is to confess an offense of wrong conduct. ",
-  "pli-tv-kd13:34.2.21": "He should be given probation according to the length of the concealment of that offense, and both should then be given the trial period of six days. ",
+  "pli-tv-kd13:34.2.21": "He should be given probation according to the length of that concealment, and both should then be given the trial period. ",
   "pli-tv-kd13:34.2.22": "Two monks have each committed an offense entailing suspension. ",
   "pli-tv-kd13:34.2.23": "During the recitation of the Monastic Code, they say, ",
   "pli-tv-kd13:34.2.24": "“Just now did we find out ",
