Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -1702,7 +1702,7 @@
   "pli-tv-kd13:34.2.26": "They regard it as an offense entailing suspension. ",
   "pli-tv-kd13:34.2.27": "One conceals his offense, but not the other. ",
   "pli-tv-kd13:34.2.28": "The one who conceals it is to confess an offense of wrong conduct. ",
-  "pli-tv-kd13:34.2.29": "He should be given probation according to the length of the concealment of that offense, and both should then be given the trial period of six days. ",
+  "pli-tv-kd13:34.2.29": "He should be given probation according to the length of that concealment, and both should then be given the trial period. ",
   "pli-tv-kd13:34.2.30": "The group of eleven sections on two monks is finished. ",
   "pli-tv-kd13:35.1.0": "9. The group of nine on unpurified with sending back to the beginning ",
   "pli-tv-kd13:35.1.1": "“It may be that a monk has committed a number of offenses entailing suspension, both specified and unspecified, both of the same name and of various names, both of the same kind and of various kinds, both of the same sort and of various sorts. ",
