--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -1705,10 +1705,10 @@
   "pli-tv-kd13:34.2.29": "He should be given probation according to the length of that concealment, and both should then be given the trial period. ",
   "pli-tv-kd13:34.2.30": "The group of eleven sections on two monks is finished. ",
   "pli-tv-kd13:35.1.0": "9. The group of nine on unpurified with sending back to the beginning ",
-  "pli-tv-kd13:35.1.1": "“It may be that a monk has committed a number of offenses entailing suspension, both specified and unspecified, both of the same name and of various names, both of the same kind and of various kinds, both of the same sort and of various sorts. ",
+  "pli-tv-kd13:35.1.1": "“It may be, monks, that a monk has committed a number of offenses entailing suspension, both specified and unspecified, both having the same name and having different names, both of the same kind and of different kinds, both of the same sort and of different sorts. ",
   "pli-tv-kd13:35.1.2": "He asks the Sangha for simultaneous probation for those offenses, ",
   "pli-tv-kd13:35.1.3": "which he gets. ",
-  "pli-tv-kd13:35.1.4": "While on probation, he commits a number of offenses entailing suspension—specified and unconcealed. ",
+  "pli-tv-kd13:35.1.4": "While on probation, he commits a number of offenses entailing suspension, unconcealed and specified. ",
   "pli-tv-kd13:35.1.5": "He asks the Sangha to send him back to the beginning for those offenses, ",
   "pli-tv-kd13:35.1.6": "and it does. The legal procedure is legitimate, irreversible, and fit to stand. And the Sangha gives him simultaneous probation legitimately. ",
   "pli-tv-kd13:35.1.7": "It then gives him the trial period of six days illegitimately, and the rehabilitation illegitimately. ",
