Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -1711,8 +1711,8 @@
   "pli-tv-kd13:35.1.4": "While on probation, he commits a number of offenses entailing suspension, unconcealed and specified. ",
   "pli-tv-kd13:35.1.5": "He asks the Sangha to send him back to the beginning for those offenses, ",
   "pli-tv-kd13:35.1.6": "which it does. The legal procedure is legitimate, irreversible, and fit to stand. The Sangha gives him the simultaneous probation legitimately, ",
-  "pli-tv-kd13:35.1.7": "It then gives him the trial period of six days illegitimately, and the rehabilitation illegitimately. ",
-  "pli-tv-kd13:35.1.8": "He’s not purified from those offenses. ",
+  "pli-tv-kd13:35.1.7": "but then gives him the trial period and the rehabilitation illegitimately. ",
+  "pli-tv-kd13:35.1.8": "He’s not purified of those offenses. ",
   "pli-tv-kd13:35.1.9": "It may be that a monk has committed a number of offenses entailing suspension, both specified and unspecified, both of the same name and of various names, both of the same kind and of various kinds, both of the same sort and of various sorts. ",
   "pli-tv-kd13:35.1.10": "He asks the Sangha for simultaneous probation for those offenses, ",
   "pli-tv-kd13:35.1.11": "which he gets. ",
