Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -1716,7 +1716,7 @@
   "pli-tv-kd13:35.1.9": "It may be that a monk has committed a number of offenses entailing suspension, both specified and unspecified, both having the same name and having different names, both of the same kind and of different kinds, both of the same sort and of different sorts. ",
   "pli-tv-kd13:35.1.10": "He asks the Sangha for simultaneous probation for those offenses, ",
   "pli-tv-kd13:35.1.11": "which he gets. ",
-  "pli-tv-kd13:35.1.12": "While on probation, he commits a number of offenses entailing suspension—specified and concealed. ",
+  "pli-tv-kd13:35.1.12": "While on probation, he commits a number of offenses entailing suspension, concealed and specified. ",
   "pli-tv-kd13:35.1.13": "He asks the Sangha to send him back to the beginning for those offenses, ",
   "pli-tv-kd13:35.1.14": "and it does. The legal procedure is legitimate, irreversible, and fit to stand. And the Sangha gives him simultaneous probation legitimately. ",
   "pli-tv-kd13:35.1.15": "It then gives him the trial period of six days illegitimately, and the rehabilitation illegitimately. ",
