Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -1727,7 +1727,7 @@
   "pli-tv-kd13:35.1.20": "While on probation, he commits a number of offenses entailing suspension, both concealed and unconcealed and specified. ",
   "pli-tv-kd13:35.1.21": "He asks the Sangha to send him back to the beginning for those offenses, ",
   "pli-tv-kd13:35.1.22": "which it does. The legal procedure is legitimate, irreversible, and fit to stand. The Sangha gives him the simultaneous probation legitimately, but then gives him the trial period and the rehabilitation illegitimately. ",
-  "pli-tv-kd13:35.1.23": "He’s not purified from those offenses. ",
+  "pli-tv-kd13:35.1.23": "He’s not purified of those offenses. ",
   "pli-tv-kd13:35.2.1": "“It may be that a monk has committed a number of offenses entailing suspension, both specified and unspecified, both having the same name and having different names, both of the same kind and of different kinds, both of the same sort and of different sorts. ",
   "pli-tv-kd13:35.2.2": "He asks the Sangha for simultaneous probation for those offenses, ",
   "pli-tv-kd13:35.2.3": "which he gets. ",
