Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -1776,15 +1776,15 @@
   "pli-tv-kd13:36.1.15": "which it does. But the legal procedure is illegitimate, reversible, and unfit to stand. The Sangha gives him the simultaneous probation illegitimately, ",
   "pli-tv-kd13:36.1.16": "but then gives him the trial period and the rehabilitation legitimately. ",
   "pli-tv-kd13:36.1.17": "He’s not purified of those offenses. ",
-  "pli-tv-kd13:36.1.18": "It may be that a monk has committed a number of offenses entailing suspension, both specified and unspecified, both of the same name and of various names, both of the same kind and of various kinds, ",
-  "pli-tv-kd13:36.1.19": "both of the same sort and of various sorts. ",
+  "pli-tv-kd13:36.1.18": "It may be that a monk has committed a number of offenses entailing suspension, both specified and unspecified, both having the same name and having different names, both of the same kind and of different kinds, ",
+  "pli-tv-kd13:36.1.19": "both of the same sort and of different sorts. ",
   "pli-tv-kd13:36.1.20": "He asks the Sangha for simultaneous probation for those offenses, ",
   "pli-tv-kd13:36.1.21": "which he gets. ",
-  "pli-tv-kd13:36.1.22": "While on probation, he commits a number of offenses entailing suspension—specified and both concealed and unconcealed. ",
+  "pli-tv-kd13:36.1.22": "While on probation, he commits a number of offenses entailing suspension, both concealed and unconcealed and specified. ",
   "pli-tv-kd13:36.1.23": "He asks the Sangha to send him back to the beginning for those offenses, ",
-  "pli-tv-kd13:36.1.24": "and it does. But the legal procedure is illegitimate, reversible, and unfit to stand. And the Sangha gives him simultaneous probation illegitimately. ",
-  "pli-tv-kd13:36.1.25": "It then gives him the trial period of six days legitimately, and the rehabilitation legitimately. ",
-  "pli-tv-kd13:36.1.26": "He’s not purified from those offenses. ",
+  "pli-tv-kd13:36.1.24": "which it does. But the legal procedure is illegitimate, reversible, and unfit to stand. The Sangha gives him the simultaneous probation illegitimately, ",
+  "pli-tv-kd13:36.1.25": "but then gives him the trial period and the rehabilitation legitimately. ",
+  "pli-tv-kd13:36.1.26": "He’s not purified of those offenses. ",
   "pli-tv-kd13:36.1.27": "“It may be that a monk has committed a number of offenses entailing suspension, both specified and unspecified, both of the same name and of various names, both of the same kind and of various kinds, both of the same sort and of various sorts. ",
   "pli-tv-kd13:36.1.28": "He asks the Sangha for simultaneous probation for those offenses, ",
   "pli-tv-kd13:36.1.29": "which he gets. ",
