Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -1822,7 +1822,7 @@
   "pli-tv-kd13:36.2.5": "While on probation, he commits a number of offenses entailing suspension, unconcealed and specified. ",
   "pli-tv-kd13:36.2.6": "He asks the Sangha to send him back to the beginning for those offenses, ",
   "pli-tv-kd13:36.2.7": "which it does. But the legal procedure is illegitimate, reversible, and unfit to stand. The Sangha gives him the simultaneous probation illegitimately. ",
-  "pli-tv-kd13:36.2.8": "Thinking that he’s on probation, he commits a number of offenses entailing suspension—specified and unconcealed. ",
+  "pli-tv-kd13:36.2.8": "Thinking that he’s on probation, he commits a number of offenses entailing suspension, unconcealed and specified. ",
   "pli-tv-kd13:36.2.9": "At this point, he remembers offenses committed while on probation for the former offenses, and he remembers offenses committed while on probation for the further offenses. ",
   "pli-tv-kd13:36.2.10": "He considers all this ",
   "pli-tv-kd13:36.2.20": "and thinks, ‘Let me ask the Sangha to send me back to the beginning for all those offenses committed while on probation. And the procedure should be legitimate, irreversible, and fit to stand; the simultaneous probation should be legitimate; ",
