Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -1837,8 +1837,8 @@
   "pli-tv-kd13:36.2.30": "which he gets. ",
   "pli-tv-kd13:36.2.31": "While on probation, he commits a number of offenses entailing suspension, concealed and specified. ",
   "pli-tv-kd13:36.2.32": "He asks the Sangha to send him back to the beginning for those offenses, ",
-  "pli-tv-kd13:36.2.33": "and it does. But the legal procedure is illegitimate, reversible, and unfit to stand. And the Sangha gives him simultaneous probation illegitimately. ",
-  "pli-tv-kd13:36.2.34": "Thinking that he’s on probation, he commits a number of offenses entailing suspension—specified and concealed. ",
+  "pli-tv-kd13:36.2.33": "which it does. But the legal procedure is illegitimate, reversible, and unfit to stand. The Sangha gives him the simultaneous probation illegitimately. ",
+  "pli-tv-kd13:36.2.34": "Thinking that he’s on probation, he commits a number of offenses entailing suspension, concealed and specified. ",
   "pli-tv-kd13:36.2.35": "At this point he remembers offenses committed while on probation for the former offenses, and he remembers offenses committed while on probation for the further offenses. ",
   "pli-tv-kd13:36.2.36": "He considers all this ",
   "pli-tv-kd13:36.2.46": "and thinks, ‘Let me ask the Sangha to send me back to the beginning for all those offenses committed while on probation. And the procedure should be legitimate, irreversible, and fit to stand; the simultaneous probation should be legitimate; the trial period of six days should be legitimate; and the rehabilitation should be legitimate.’ ",
